# casual-office

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release-linux.yml
apps/shell/: index.html  package.json  tsconfig.json  vite.config.ts
apps/shell/scripts/: copy-editors.sh
apps/shell/src/: main.ts  styles.css
apps/shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/shell/src-tauri/capabilities/: default.json
apps/shell/src-tauri/scripts/: postinst.sh
apps/shell/src-tauri/src/: lib.rs  main.rs
apps/shell/tests/: _setup.ts  docx-ui-inspect.spec.ts  editor-boot.spec.ts  editor-save.spec.ts  launcher.spec.ts
docs/: ARCHITECTURE.md  BUILD.md  CODE-GRAPH.md  PIPELINE.md  UX-AUDIT.md
